--- a/style.css
+++ b/style.css
@@ -11,23 +11,25 @@ body {
 
 #container {
   margin: 40px;
-  height: 720px;
+  height: 1440px;
+  width: 4500px;
 }
 
 .timeline {
   float: left;
   width: 60px;
-  display: block;
+  display: inline-block;
   height: 100%;
 }
 
 .eventpanel {
   padding: 0 10px;
-  margin-left: 70px;
+  margin-left: 5px;
   border-left: 1px solid #CCC;
   background-color: #ECECEC;
   width: 600px;
   height: 100%;
+  display: inline-block;
 }
 
 .timeline div {
